--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>myresume</title>
-      <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Akshay Kolli - Resume</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Hi, I'm Akshay Kolli!</h1>
+            <h1>Akshay Kolli</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -23,7 +23,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Hey there! My name is Akshay Kolli. I am a hard-worker and critical thinker, with a keen sense of kindness. I was born on October 21st, 2008.</p>
+            <p>I'm Akshay Kolli, a dedicated individual with a passion for learning and problem-solving. I thrive in collaborative environments and enjoy challenges that push me to grow.</p>
         </section>
 
         <section id="skills">
@@ -41,24 +41,24 @@
             <h2>Experience</h2>
             <div class="job">
                 <h3>Soccer Referee</h3>
-                <p>I have volunteered as a referee for a U13 Soccer Game.</p>
+                <p>Volunteered as a referee for U13 Soccer Games.</p>
             </div>
             <div class="job">
                 <h3>Soccer Team</h3>
-                <p>Playing on a soccer team has taught me important skills such as teamwork and leadership.</p>
+                <p>Developed teamwork and leadership skills through playing on a soccer team.</p>
             </div>
         </section>
 
         <section id="education">
             <h2>Education</h2>
             <ul>
-                <li>Currently studying at Seaquam Secondary, and in grade 10.</li>
+                <li>Currently studying at Seaquam Secondary, Grade 10</li>
             </ul>
         </section>
 
         <section id="contact">
-            <h3>Contact Me</h3>
-            My Email: <a href="akshay.kolli@gmail.com">akshay.kolli@gmail.com</a>
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:akshay.kolli@gmail.com">akshay.kolli@gmail.com</a></p>
             <p>Phone: 778-700-6334</p>
         </section>
     </div>
